---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- - kind:
      name: TooManyStatements
      body: Too many statements (2 > 1)
      suggestion: ~
      fixable: false
    location:
      row: 2
      column: 4
    end_location:
      row: 2
      column: 5
    fix: ~
    parent: ~
  - kind:
      name: TooManyStatements
      body: Too many statements (3 > 1)
      suggestion: ~
      fixable: false
    location:
      row: 6
      column: 4
    end_location:
      row: 6
      column: 5
    fix: ~
    parent: ~
  - kind:
      name: TooManyStatements
      body: Too many statements (2 > 1)
      suggestion: ~
      fixable: false
    location:
      row: 7
      column: 8
    end_location:
      row: 7
      column: 9
    fix: ~
    parent: ~

